Move to JPA and standardised unit tests